--- a/src/components/locales/pt.json
+++ b/src/components/locales/pt.json
@@ -12,7 +12,7 @@
   "about": {
     "introduction": "Introdução",
     "overview": "Visão Geral",
-    "description": " Sou um desenvolvedor fronend experiente com habilidades em TypeScript e JavaScript, além de expertise em frameworks como React e Node.js. Sou um aprendiz rápido em criar soluções eficientes, escaláveis e amigáveis ao usuário, que resolvem problemas do mundo real.",
+    "description": " Sou um desenvolvedor frontend experiente com habilidades em TypeScript e JavaScript, além de expertise em frameworks como React e Node.js. Sou um aprendiz rápido em criar soluções eficientes, escaláveis e amigáveis ao usuário, que resolvem problemas do mundo real.",
     "moreInfo": "Mais informações",
     "frontendDeveloper": "Desenvolvedor Frontend",
     "aboutMe": "Sobre Mim",
